# ai-travel-agent

./: README.md
backend/: pyproject.toml
backend/app/: crud.py  enums.py  models.py  utils.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 1ec9d55e0b29_initial_schema.py
backend/app/api/: deps.py
backend/app/api/routes/: login.py  utils.py
backend/app/core/: config.py  db.py  security.py
